--- a/aula010324/tabela.html
+++ b/aula010324/tabela.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Tabela Liga Portugal Betclic top-4</title>
+  </head>
     <table>
   <tr>
     <th>Logo</th>
     <th>Clube</th>
     <th>Jogos</th>
     <th>Pontos</th>
+    <th>Golos Marcados</th>
+    <th>Golos Sofridos</th>
+    <th>Melhor Marcador</th>
+    <th>Golos</th>
     <th>Pagina Oficial</th>
   </tr>
   <tr>
@@ -13,24 +20,40 @@
     <td>Benfica</td>
     <td>23</td>
     <td>58</td>
+    <td>56</td>
+    <td>15</td>
+    <td><img src="C:\Users\Nuno\Pictures\Saved Pictures\naom_65b0243d92561.jpg" alt="Rafa" width="80" height="60"></td>
+    <td>12</td>
     <td><a href="https://www.slbenfica.pt/" target="_blank" title="Site Oficial SLB">Visite o site oficial do SLB</a></td>
     <tr>
     <td><img src="C:\Users\Nuno\Pictures\Saved Pictures\transferir.png" alt="Simbolo SCP" width="50" height="50"></td>
     <td>Sporting</td>
     <td>22</td>
     <td>56</td>
+    <td>63</td>
+    <td>22</td>
+    <td><img src="C:\Users\Nuno\Pictures\Saved Pictures\Viktor-Gyokeres-Sporting-Farense-1.jpg" alt="Gyokeres" width="80" height="60"></td>
+    <td>17</td>
     <td><a href="https://www.sporting.pt/pt" target="_blank" title="Site Oficial SCP">Visite o site oficial do SCP</a></td>
     </tr>
     <td><img src="C:\Users\Nuno\Pictures\Saved Pictures\transferir.jpg" alt="Simbolo FCP" width="50" height="50"></td>
     <td>Porto</td>
     <td>23</td>
     <td>49</td>
+    <td>38</td>
+    <td>17</td>
+    <td><img src="C:\Users\Nuno\Pictures\Saved Pictures\transferir (1).jpg" alt="Evanilson" width="80" height="60"></td>
+    <td>10</td>
     <td><a href="https://www.fcporto.pt/pt" target="_blank" title="Site oficial do FCP">Visite o site oficial do FCP</a></td>
     <tr>
     <td><img src="C:\Users\Nuno\Pictures\Saved Pictures\150px-Sporting_Clube_Braga.png" alt="Simbolo SCB" width="50" height="50"></td>
     <td>Braga</td>
     <td>23</td>
     <td>46</td>
+    <td>50</td>
+    <td>33</td>
+    <td><img src="C:\Users\Nuno\Pictures\Saved Pictures\jjyik7qtvqeb.jpg" alt="Banza" width="80" height="60"></td>
+    <td>17</td>
     <td><a href="https://scbraga.pt/" target="_blank" title="Site oficial do SCB">Visite o site oficial do SCB</a></td>
     </tr>
   </tr>
