--- a/aula010324/tabela.html
+++ b/aula010324/tabela.html
@@ -3,7 +3,7 @@
   <head>
     <title>Tabela Liga Portugal Betclic top-4</title>
   </head>
-    <table>
+    <table border="9">
   <tr>
     <th>Logo</th>
     <th>Clube</th>
