--- a/Lab1/login.html
+++ b/Lab1/login.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="login.css">
     <title>Login</title>
 </head>
 <body>
-    <h1>Login</h1>
-    <h3>Email:</h3>
-    <h3>Password:</h3>
-    <h4>Login</h4>
-    <h4><a href="password.html" target="_self" title="Recuperar Password">Forgot Password?</a></h4>
+    <h5 id="back"><a href="pag_inicial.html" target="_self" title="Voltar á página incial">Back</a></h5>
+    <h1 id="log">Login</h1>
+    <br>
+    <h3 id="box"><p>Email:</p><p>Password:</p><p id="login">Login</p></h3>
+    <h4 id="pass"><a href="password.html" target="_self" title="Recuperar Password">Forgot Password?</a></h4>
 </body>
 </html>
