--- a/Lab1/pag_inicial.html
+++ b/Lab1/pag_inicial.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="pag_inicial.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto 1</title>
+    <title>Página Inicial</title>
 </head>
 <body>
     <h1 id="titulo">Lab 1</h1>
