--- a/Lab1/password.html
+++ b/Lab1/password.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt">
+
 <head>
+    <link rel="stylesheet" href="password.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recuperar Password</title>
 </head>
+
 <body>
-    <h1>Forgot Password</h1>
-    <h3>Email:</h3>
-    <h3>Get new password</h3>
+    <h5 id="back"><a href="pag_inicial.html" target="_self" title="Voltar á página incial">Back</a></h5>
+    <h1 id="titulo">Forgot Password</h1>
+    <br>
+    <h3 id="box"><p>Email:</p><p id="pass">Get new password</p></h3>
 </body>
+
 </html>
