--- a/Lab1/registo.html
+++ b/Lab1/registo.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
+    <link rel="stylesheet" href="registo.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
 </head>
 <body>
-    <h1>Sign Up</h1>
-    <h3>Name:</h3>
-    <h3>Email:</h3>
-    <h3>Password</h3>
-    <h3>Re-type Password</h3>
-    <h4>Sign up</h4>
+    <h5 id="back"><a href="pag_inicial.html" target="_self" title="Voltar á página incial">Back</a></h5>
+    <h1 id="sign">Sign Up</h1>
+    <h3 id="box"><p>Name:</p><p>Email:</p><p>Password:</p><p>Re-type Password:</p><p id="signUp">Sign up</p></h3>
 </body>
 </html>
