--- a/Lab1/login.html
+++ b/Lab1/login.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="login.css">
     <title>Login</title>
 </head>
+
 <body>
     <h5 id="back"><a href="pag_inicial.html" target="_self" title="Voltar á página incial">Back</a></h5>
     <h1 id="log">Login</h1>
     <br>
-    <h3 id="box"><p>Email:</p><p>Password:</p><p id="login">Login</p></h3>
+    <h3 id="box">
+        <p id="board" >Email:</p>
+        <p id="board">Password:</p>
+        <p id="login">Login</p>
+    </h3>
     <h4 id="pass"><a href="password.html" target="_self" title="Recuperar Password">Forgot Password?</a></h4>
 </body>
 </html>
