--- a/Lab1/login.html
+++ b/Lab1/login.html
@@ -13,10 +13,10 @@
     <h1 id="log">Login</h1>
     <br>
     <h3 id="box">
-        <p id="board" >Email:</p>
-        <p id="board">Password:</p>
+        <p>Email:</p>
+        <p>Password:</p>
         <p id="login">Login</p>
+        <p id="pass"><a href="password.html" target="_self" title="Recuperar Password">Forgot Password?</a></p>
     </h3>
-    <h4 id="pass"><a href="password.html" target="_self" title="Recuperar Password">Forgot Password?</a></h4>
 </body>
 </html>
