--- a/Lab1/login.html
+++ b/Lab1/login.html
@@ -13,10 +13,14 @@
     <h1 id="log">Login</h1>
     <br>
     <h3 id="box">
-        <p>Email:</p>
-        <p>Password:</p>
-        <p id="login">Login</p>
+        <form>
+            <label for="fname">Email:</label>
+            <input type="text" id="fname" name="fname"><br>
+            <label for="fpass">Password:</label><input type="text" name="fpass" id="fpass"><br><br>
+            <input id="login" type="submit" value="Login">
+        </form>
         <p id="pass"><a href="password.html" target="_self" title="Recuperar Password">Forgot Password?</a></p>
     </h3>
 </body>
+
 </html>
