--- a/Lab1/password.html
+++ b/Lab1/password.html
@@ -12,7 +12,11 @@
     <h5 id="back"><a href="pag_inicial.html" target="_self" title="Voltar á página incial">Back</a></h5>
     <h1 id="titulo">Forgot Password</h1>
     <br>
-    <h3 id="box"><p>Email:</p><p id="pass">Get new password</p></h3>
+    <h3 id="box">
+        <form><label for="fname">Email:</label>
+            <input type="text" name="fnme" id="fname"><br><br><input id="pass" type="submit" value="Get new password">
+        </form>
+    </h3>
 </body>
 
 </html>
