--- a/Lab1/pag_inicial.html
+++ b/Lab1/pag_inicial.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página Inicial</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
     <h1 id="titulo">Lab 1</h1>
-    <img id="img" src="C:\Users\Nuno\Pictures\Saved Pictures\transferir (1).png" alt="Logo">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <img id="img" src="" alt="Logo">
     <br>
     <h3 id="login"><a href="login.html" target="_self" title="Iniciar Sessão">Login</a></h3>
     <br>
