--- a/Lab1/password.html
+++ b/Lab1/password.html
@@ -14,7 +14,7 @@
     <br>
     <h3 id="box">
         <form><label for="fname">Email:</label>
-            <input type="text" name="fnme" id="fname"><br><br><input id="pass" type="submit" value="Get new password">
+            <input id="label" type="text" name="fnme" id="fname"><br><br><input id="pass" type="submit" value="Get new password">
         </form>
     </h3>
 </body>
