--- a/Lab1/login.html
+++ b/Lab1/login.html
@@ -15,8 +15,8 @@
     <h3 id="box">
         <form>
             <label for="fname">Email:</label>
-            <input type="text" id="fname" name="fname"><br>
-            <label for="fpass">Password:</label><input type="text" name="fpass" id="fpass"><br><br>
+            <input id="label" type="text" id="fname" name="fname"><br>
+            <label for="fpass">Password:</label><input id="label" type="text" name="fpass" id="fpass"><br><br>
             <input id="login" type="submit" value="Login">
         </form>
         <p id="pass"><a href="password.html" target="_self" title="Recuperar Password">Forgot Password?</a></p>
