--- a/Lab1/registo.html
+++ b/Lab1/registo.html
@@ -14,7 +14,8 @@
     <h3 id="box">
         <form><label for="fname">Nome:</label><input id="label" type="text" id="fname" name="fname"><br><label
                 for="fmail">Email:</label><input id="label" type="text" id="fmail" name="fmail"><br><label
-                for="fpass">Password:</label><input id="label" type="text" id="fpass" name="fpass"><br><label for="fretype">Re-Type
+                for="fpass">Password:</label><input id="label" type="text" id="fpass" name="fpass"><br><label
+                for="fretype">Re-Type
                 Password<input id="label" type="text" id="fretype" name="fretype"></label><br><br><input type="checkbox"
                 name="agree" id="agree" value="Policy"><label id="policy" for="agree">I agree to the Terms of Use and
                 Privacy Policy
