--- a/aula180324/exaply.html
+++ b/aula180324/exaply.html
@@ -15,7 +15,7 @@
                     <div class="card-body">
                       <h4 class="card-title">Imagem</h4>
                       <p class="card-text">Imagem</p>
-                      <a href="#" class="btn btn-primary" data-bs-toogle="modal" data-bs-target="#myModal">Ver +</a>
+                      <a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal">Ver +</a>
                     </div>
             </div>
         </div>
