--- a/Lab2/pagina_principal.html
+++ b/Lab2/pagina_principal.html
@@ -91,7 +91,8 @@
         <!-- Modal body -->
         <div class="modal-body">
           <h5>Descrição</h5>
-          <input id="label" type="text" id="fname" name="fname"><br><br>
+          <input id="label" type="text" id="fname" name="fname">
+          <h5>Data</h5>
           <input type="date" name="data" id="data">
         </div>
   
