--- a/Lab2/pagina_principal.html
+++ b/Lab2/pagina_principal.html
@@ -15,6 +15,7 @@
         <div class="row">
             <div class="col-md-4">
                 <img id="foto" src="C:\Users\Nuno\Pictures\Camera Roll\WIN_20230220_18_51_13_Pro.jpg" alt="Foto Perfil">
+
             </div>
             <div class="col-md-4">
                 <br>
@@ -32,6 +33,11 @@
             <div class="col-md-10">
                 <br>
                 <h3>As minhas tarefas</h3>
+                <h1>ejfiev</h1>
+                <h2>iewh</h2>
+                <h3>ehf</h3>
+                <h4>qwdh</h4>
+                <h5>ewoiehf</h5>
             </div>
             <div class="col-md-2">
                 <br>
